# CURE

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/training/: chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_1000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_2000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_3000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_custom_eval_250_curriculum_500_with_aug_1000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_custom_eval_250_curriculum_500_with_aug_2000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_custom_eval_250_curriculum_500_with_aug_3000_steps.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_flash_attention_v1.yaml  chestimagenome_anatomy_grounded_reportgen_medgemma-4b-it_v2.yaml  chestimagenome_anatomy_reportgen_cxrmate_rrg24_end_to_end_finetuning.yaml  mimiccxr_reportgen_medgemma-4b-it_v1.yaml  multi_task_medgemma-4b-it_v1.yaml  multi_task_medgemma-4b-it_v10_custom_eval_500_steps_curriculum_3000_steps_with_augmentation.yaml  multi_task_medgemma-4b-it_v11_custom_eval_500_steps_curriculum_2000_steps_with_augmentation.yaml  multi_task_medgemma-4b-it_v12_custom_eval_500_steps_curriculum_1500_steps_with_augmentation.yaml  multi_task_medgemma-4b-it_v13_custom_eval_sanity_check.yaml  multi_task_medgemma-4b-it_v14_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_1000_steps.yaml  multi_task_medgemma-4b-it_v15_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_2000_steps.yaml  multi_task_medgemma-4b-it_v16_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v17_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_1000_steps.yaml  multi_task_medgemma-4b-it_v18_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_2000_steps.yaml  multi_task_medgemma-4b-it_v19_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v20_custom_eval_500_steps_curriculum_3000_steps_with_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v21_custom_eval_500_steps_uniform_inter_natural_intra_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v22_custom_eval_500_steps_curriculum_inter_3000_natural_intra_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v23_custom_eval_500_steps_inter_uniform_intra_curriculum_3000_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v24_custom_eval_500_steps_inter_natural_intra_natural_aug_pretrained_cig_3000_steps.yaml  multi_task_medgemma-4b-it_v2_uniform_sampling.yaml  multi_task_medgemma-4b-it_v3_uniform_sampling.yaml  multi_task_medgemma-4b-it_v4_custom_eval.yaml  multi_task_medgemma-4b-it_v5_custom_eval.yaml  multi_task_medgemma-4b-it_v6_custom_eval_augmentations.yaml  multi_task_medgemma-4b-it_v7_custom_eval_augmentations_diagnostics.yaml  multi_task_medgemma-4b-it_v8_custom_eval_500_steps_uniform_no_augmentation.yaml  multi_task_medgemma-4b-it_v9_custom_eval_500_steps_uniform_with_augmentation.yaml  (+13 more)
notebooks/inference/: Load and run CURE from Hugging Face.ipynb
scripts/: eval_chest_imagenome_anatomy_grounded_report_generation.py  eval_grounded_report_generation.py  eval_phrase_grounding.py  eval_report_generation.py  generate_anatomy_guided_reports_with_llm.py  label_reports_with_llm.py  push_to_hf.py  train_medgemma.py
slurm/: launch_chest_imagenome_anatomy_grounded_report_gen_evaluation.sh  launch_grounded_report_generation_evaluation.sh  launch_interactive.sh  launch_medgemma_training.sh  launch_phrase_grounding_evaluation.sh  launch_report_generation_evaluation.sh  submit_medgemma_training.sh
vlm_research_kit/: checkpointing.py  nltk_setup.py  settings.py
(+36 files in other folders)
